[package]
name = "memorable"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/memorable"
homepage = "https://github.com/al8n/memorable"
documentation = "https://docs.rs/memorable"
description = "Lock-free, ordered and multiple version memory table for key-value databases."
license = "MIT OR Apache-2.0"
rust-version = "1.81"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = ["std"]
alloc = ["dbutils/alloc"]
std = ["crossbeam-skiplist-mvcc", "smallvec-wrapper/std", "dbutils/std"]

[dependencies]
crossbeam-skiplist-mvcc = { version = "0.2", optional = true }
dbutils = { version = "0.10", default-features = false }
ref-cast = "1"
smallvec-wrapper = { version = "0.1", default-features = false }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
] }
